--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -13,5 +13,12 @@ jobs:
     steps:
     - name: Checar código
       uses: actions/checkout@v2
+    - name: Instalando streamlink e selenium
+      run: |
+          pip install --user --upgrade streamlink
+          pip install --user --upgrade selenium
+          pip install yt-dlp
+          pip install pytube
+          
     - name: Executar script
       run: python amor.py
