--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -29,8 +29,17 @@ jobs:
     - name: Executar script
       run: python amor.py
       
-    - name: push changes
-      uses: ad-m/github-push-action@master
+    - name: Fazer push do arquivo YAML
+      uses: actions/upload-artifact@v2
       with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: main        
+          name: agendador-de-amor.yml
+          path: agendador-de-amor.yml
+
+    - name: Commit e fazer push do arquivo YAML
+      uses: stefanzweifel/git-auto-commit-action@v4
+      with:
+          commit_message: "Atualizar agendador-de-amor.yml"
+          file_pattern: agendador-de-amor.yml
+          commit_options: '--author "GitHub Action <action@github.com>"'
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
