--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -29,10 +29,19 @@ jobs:
     - name: Executar script
       run: python amor.py
       
-    - name: Fazer push do arquivo YAML
+    - name: commit files
       run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add agendador-de-amor.yml
-          git commit -m "Atualizar agendador-de-amor.yml"
-          git push origin HEAD:main
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git add -A
+        git commit -m "update data" -a
+          
+    - name: Get current date
+      id: date
+      run: echo "::set-output name=date::$(date '+%Y-%m-%d')"
+        
+    - name: push changes
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: main  
