--- a/.github/workflows/separados.yml
+++ b/.github/workflows/separados.yml
@@ -29,25 +29,16 @@ jobs:
     - name: Executar script
       run: python amor.py
       
-    - name: Fazer push do arquivo YAML
-      run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add separados.yml
-          git commit -m "Atualizar separados.yml"
-          git push origin HEAD:main
+
           
-    - name: Criar arquivo YAML
-      run: touch separados.yml
-
-
     - name: Fazer push do arquivo YAML
-      env:
-        FILENAME: 'separados.yml'
-        COMMIT_MESSAGE: 'Atualizar separados.yml'
       run: |
-        git config --global user.email "action@github.com"
-        git config --global user.name "GitHub Action"
-        git add $FILENAME
-        git commit -m "$COMMIT_MESSAGE"
-        git push
+       git config --global user.email "action@github.com"
+       git config --global user.name "GitHub Action"
+
+       git add -A
+
+       git commit -m "Atualização automática do agendador de amor"
+
+       git push origin main
+
