--- a/.github/workflows/separados.yml
+++ b/.github/workflows/separados.yml
@@ -1,16 +1,18 @@
 name: Agendador de amor
 
 on:
+  schedule:
+      - cron: '0 */2 * * *'
+      
   push:
   
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
   
 jobs:
-  executar-amor:
+  executar:
     runs-on: ubuntu-latest
-    schedule:
-      - cron: '0 */2 * * *'
+
     steps:
     - name: Checar código
       uses: actions/checkout@v2
