--- a/.github/workflows/separados.yml
+++ b/.github/workflows/separados.yml
@@ -1,23 +1,35 @@
-name: Agendador de amor
+# This is a basic workflow to help you get started with Actions
 
+name: Separados
+# Controls when the action will run. 
 on:
   schedule:
-      - cron: '0 */2 * * *'
-      
-  push:
+    - cron: "4 * * * *"
+    
+  pull_request:
+    branches:
+      - main
   
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-  
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  executar:
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - name: Checar código
-      uses: actions/checkout@v2
-    - name: Instalando streamlink e selenium
-      run: |
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+
+      # Runs a single command using the runners shell
+      #- name: Run a one-line script
+      #  run: echo testing!
+      - name: Instalando streamlink e selenium
+        run: |
           pip install --user --upgrade streamlink
           pip install --user --upgrade selenium
           pip install yt-dlp
@@ -29,13 +41,13 @@ jobs:
           pip install uvicorn
           pip install schedule
           
-    - name: Executar script
-      run: python amor.py
+      - name: Executar script
+        run: python amor.py
           
-    - name: Fazer push do arquivo YAML
-      run: |
-       git config --global user.email "action@github.com"
-       git config --global user.name "GitHub Action"
-       git add -A
-       git commit -m "Atualização automática do agendador de amor"
-       git push origin main
+      - name: Fazer push do arquivo YAML
+        run: |
+         git config --global user.email "action@github.com"
+         git config --global user.name "GitHub Action"
+         git add -A
+         git commit -m "Atualização automática do agendador de amor"
+         git push origin main
