--- a/.github/workflows/separados.yml
+++ b/.github/workflows/separados.yml
@@ -28,11 +28,9 @@ jobs:
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
         $(yt-dlp --print urls https://www.youtube.com/watch?v=wKjPli-AHdA)
         EOL'
-    - name: git add
-      run: |
-        git add -A
-        ls -la
-    - name: commit & push
-      run: |
-        git commit -m "links are updated"
-        git push
+    - name: Commit and Push changes
+      uses: ad-m/github-push-action@v1
+      with:
+        repo: https://<PAT>@github.com/<username>/<repo>.git
+        branch: main
+        message: 'Automated commit and push'
