--- a/.github/workflows/separados.yml
+++ b/.github/workflows/separados.yml
@@ -4,17 +4,16 @@ on:
   schedule:
     - cron: '0 */2 * * *'
 
-  workflow_dispatch:
-  
-  
 jobs:
   executar-amor:
     runs-on: ubuntu-latest
     steps:
-    - name: Checar código
-      uses: actions/checkout@v2
-    - name: Instalando streamlink e selenium
-      run: |
+      - name: Checar código
+        uses: actions/checkout@v2
+        with:
+          path: ./amor.py
+      - name: Instalando streamlink e selenium
+        run: |
           pip install --user --upgrade streamlink
           pip install --user --upgrade selenium
           pip install yt-dlp
@@ -26,20 +25,21 @@ jobs:
           pip install uvicorn
           pip install schedule
           
-    - name: Executar script
-      run: python amor.py
       
-    - name: Fazer push do arquivo YAML
-      uses: actions/upload-artifact@v2
-      with:
+      - name: Executar script
+        run: python amor.py
+      
+      - name: Fazer push do arquivo YAML
+        uses: actions/upload-artifact@v2
+        with:
           name: separados.yml
           path: separados.yml
 
-    - name: Commit e fazer push do arquivo YAML
-      uses: stefanzweifel/git-auto-commit-action@v4
-      with:
+      - name: Commit e fazer push do arquivo YAML
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
           commit_message: "Atualizar separados.yml"
           file_pattern: separados.yml
           commit_options: '--author "GitHub Action <action@github.com>"'
-      env:
+        env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
