--- a/.github/workflows/separados.yml
+++ b/.github/workflows/separados.yml
@@ -4,7 +4,9 @@ on:
   schedule:
     - cron: '0 */2 * * *'
 
-jobs:
+    workflow_dispatch:
+ 
+ jobs:
   executar-amor:
     runs-on: ubuntu-latest
     steps:
