--- a/.github/workflows/separados.yml
+++ b/.github/workflows/separados.yml
@@ -17,6 +17,7 @@ jobs:
         run: |
           setx path "%path%;C:\Python39\Scripts;C:\Python39"
           python -m pip install --upgrade pip
+          pip install requests 
 
 
       - name: Executar script
