--- a/.github/workflows/separados.yml
+++ b/.github/workflows/separados.yml
@@ -20,6 +20,14 @@ jobs:
           pip install requests 
 
 
+      - name: Instalando streamlink e selenium
+        run: |
+          pip install --user --upgrade streamlink
+          pip install --user --upgrade selenium
+          pip install yt-dlp
+          pip install pytube
+          
+          
       - name: INSTALANDO SELENIUM
         run: |
          pip install selenium --upgrade
