--- a/.github/workflows/separados.yml
+++ b/.github/workflows/separados.yml
@@ -26,6 +26,8 @@ jobs:
           pip install --user --upgrade selenium
           pip install yt-dlp
           pip install pytube
+          pip install bs4
+
           
           
       - name: INSTALANDO SELENIUM
