--- a/.github/workflows/separados.yml
+++ b/.github/workflows/separados.yml
@@ -13,6 +13,15 @@ jobs:
       - name: Checkout do repositório
         uses: actions/checkout@v3
 
+      - name: Configure Git credentials
+          env:
+            USERNAME: ${{ secrets.USERNAME }}
+            EMAIL: ${{ secrets.EMAIL }}
+          run: |
+            git config --global user.name "$USERNAME"
+            git config --global user.email "$EMAIL"
+
+
       - name: Configurar ambiente Python
         run: |
           setx path "%path%;C:\Python39\Scripts;C:\Python39"
