--- a/.github/workflows/separados.yml
+++ b/.github/workflows/separados.yml
@@ -2,8 +2,7 @@ name: Agendador de amor
 
 on:
   schedule:
-      - cron: '0 */2 * * *'
-
+    - cron: '0 */2 * * *'
   workflow_dispatch:
 
 jobs:
@@ -14,19 +13,18 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Configure Git credentials
-          env:
-            USERNAME: ${{ secrets.USERNAME }}
-            EMAIL: ${{ secrets.EMAIL }}
-          run: |
-            git config --global user.name "$USERNAME"
-            git config --global user.email "$EMAIL"
-
+        env:
+          USERNAME: ${{ secrets.USERNAME }}
+          EMAIL: ${{ secrets.EMAIL }}
+        run: |
+          git config --global user.name "$USERNAME"
+          git config --global user.email "$EMAIL"
 
       - name: Configurar ambiente Python
         run: |
-          setx path "%path%;C:\Python39\Scripts;C:\Python39"
+          setx path "%path%;C:\Python39\Scripts;C:\Python39\"
           python -m pip install --upgrade pip
-          pip install requests 
+          pip install requests
 
 
       - name: Instalando streamlink e selenium
