--- a/.github/workflows/separados.yml
+++ b/.github/workflows/separados.yml
@@ -51,8 +51,10 @@ jobs:
           USERNAME: ${{ secrets.USERNAME }}
           EMAIL: ${{ secrets.EMAIL }}
         run: |
-          git config user.name "$USERNAME"
-          git config user.email "$EMAIL"
+          echo "Username: $USERNAME"
+          echo "Email: $EMAIL"
+          git config --global user.name "$USERNAME"
+          git config --global user.email "$EMAIL"
           echo "User name and email set successfully"
 
 
