--- a/.github/workflows/separados.yml
+++ b/.github/workflows/separados.yml
@@ -1,67 +1,27 @@
-name: Agendador de amor
+# This is a basic workflow to help you get started with Actions
 
+name: Python script
+
+# Controls when the workflow will run
 on:
-  schedule:
-    - cron: '0 */2 * * *'
+
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  executar-amor:
-    runs-on: windows-latest
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Checkout do repositório
-        uses: actions/checkout@v2
-      
-      - name: Configurar ambiente Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.9
-          architecture: x64
-      
-      - name: Instalar Git
-        run: |
-          choco install git
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v3
 
-
-      - name: Verificar PowerShell
-        run: |
-          powershell -command "Get-Host"
-
-
-      - name: Exibir caminho do Python
-        run: echo $env:pythonLocation
-
-
-      - name: Instalar dependências Python
-        run: |
-          python -m pip install --upgrade pip
-          pip install requests
-          pip install streamlink
-          pip install selenium
-          pip install yt-dlp
-          pip install pytube
-          pip install beautifulsoup4
-      
-      - name: Executar script
-        run: python amor.py
-      
-
-      - name: Configure Git credentials
+      # Runs a single command using the runners shell
+      - name: Run a Python script
         env:
-          USERNAME: ${{ secrets.USERNAME }}
-          EMAIL: ${{ secrets.EMAIL }}
-        run: |
-          echo "Username: $USERNAME"
-          echo "Email: $EMAIL"
-          git config --global user.name "$USERNAME"
-          git config --global user.email "$EMAIL"
-          echo "User name and email set successfully"
-
-
-      - name: Fazer commit e push
-        uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: Atualizando informações de amor
-          commit_options: '--no-verify'
-          commit_user_name: ${{ secrets.USERNAME }}
-          commit_user_email: ${{ secrets.EMAIL }}
+          AZURE_SECRET_TOKEN: ${{ secrets.AZURE_SECRET_TOKEN }}
+        run: python .github/amor.py
